fix the caret alignment

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -60,8 +60,8 @@ ul.benefits {
     }
     .program {
       font-weight: bold;
-      align-self: end;
       text-align: right;
+      margin-right: 0.3rem;
     }
   }
 }
